--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint": "^8.50.0",
     "prettier": "^3.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0"
   }
 }
